Aqui vai uma mensagem TRABALHO NOVO AULA 12 imagme ok

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -17,7 +17,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('../images/blog_cover_r7.png) no-repeat;
+    background: url('../images/blog_cover_r7.jpeg') no-repeat;
     background-size: cover;
     background-position: center;
 }
