--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2,7 +2,7 @@
     --primary-color: #fff;
     --secondary-color: #9EB3C2;
     --text-btn-color: #333;
-    --btn-color-hover: #0278a7;
+    --btn-color-hover: #8e979b;
 }
 
 *{
@@ -25,7 +25,7 @@ body{
 .wrapper{
     width: 420px;
     background: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 2px solid rgba(255, 255, 255, 0.425);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: var(--primary-color);
@@ -51,7 +51,7 @@ body{
     background: transparent;
     border: none;
     outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
+    border: 5px solid rgba(255, 255, 255, 0.842);
     border-radius: 40px;
     font-size: 16px;
     color: var(--primary-color);
